# pistar

./: README.md
control_your_robot/: README.md  README_CN.md  deploy.sh  developer_README.md  eval_offline.sh  inspect_lerobot.py  pyproject.toml  requirements.txt  reset_master_arm.py  test_dagger_basic.py  test_drag_teach.py  test_load_dataset.py  test_patch_torch.py
control_your_robot/.claude/: settings.local.json
control_your_robot/config/: RoboTwin_setting.yml  robot_1_model_infer.yml  robot_1_move_mobile_1.yml  robot_1_move_mobile_2.yml  robot_2_model_infer.yml  robot_2_move_mobile_1.yml  robot_2_move_mobile_2.yml
control_your_robot/docs/: IMPLEMENTATION_SUMMARY.md  LEROBOT_DIRECT_COLLECT.md  dagger_deployment_guide.md  deployment_with_collection.md  deployment_with_collection_quickstart.md  piper_single_websocket_deployment.md
control_your_robot/example/collect/: collect.py  collect_lerobot_direct.py  collect_lerobot_master_slave_teleop.py  collect_mp_component.py  collect_mp_component_different_time_freq.py  collect_mp_robot.py  dr_piper_collect.py
control_your_robot/example/deploy/: deploy.py  force_reset_both_arms.py  offline_eval.py  piper_dagger_on_PI0.py  piper_dagger_on_PI0.py.backup  piper_on_PI0.py  piper_on_RDT.py  piper_single_on_ACT.py  piper_single_on_DP.py  piper_single_on_PI0.py  piper_single_on_PI0_websocket.py  reset_master_to_follower.py  robot_on_PI0.py  robot_on_RDT.py  setup_master_slave_teleoperation.py
control_your_robot/example/task/: parallel_task.py  serial_task.py
control_your_robot/example/teleop/: dr_piper_arm_teleop.py  master_slave_arm_teleop.py  master_slave_arm_teleop_fs.py
control_your_robot/my_robot/: README.md  _realsense_only.py  agilex_piper_dual_base.py  agilex_piper_dual_teleop.py  agilex_piper_single_base.py  base_robot.py  base_robot_lerobot.py  camera_config.py  dr_single.py  piper_dagger.py  piper_single_lerobot.py  realman_65_dual_base.py  realman_65_dual_ros_base.py  realman_65_dual_ros_teleop.py  test_piper_single_base.py  test_robot.py  test_robot_2.py  y1_dual_base.py
control_your_robot/scripts/: _download_drAlohaSDK.sh  backfill_lerobot_columns.py  client.py  client_async.py  collect_moving_ckpt.py  convert2act_hdf5.py  convert2lerobot.py  convert2openpi.py  convert2rdt_hdf5.py  convert_piper_single_to_lerobot.py  convert_piper_to_lerobot_libero.py  data_show.py  delete_lerobot_episodes.py  get_follower_joint_position.py  inspect_parquet.py  read_rdt_data.py  serve_piper_single_pi05star_websocket.py  server.py  test_controller.py  upload_zip.py  visual_hdf5.py  visual_hdf5_rerun.py  visual_hdf5_rerun.sh
control_your_robot/skills/deploy-piper-single-websocket/: SKILL.md
control_your_robot/skills/deploy-piper-single-websocket/agents/: openai.yaml
control_your_robot/skills/deploy-piper-single-websocket/references/: data-contract.md  source-map.md
control_your_robot/src/robot/controller/: Bunker_controller.py  FrankaFranky_controller.py  Piper_controller.py  RealmanRos_controller.py  Realman_controller.py  TestArm_controller.py  TestMobile_controller.py  Tracer_controller.py  URUrx_controller.py  Y1_controller.py  arm_controller.py  controller.py  dexhand_controller.py  drAloha_controller.py  mobile_controller.py
control_your_robot/src/robot/piper_sdk/piper_sdk/hardware_port/: can_encapsulation_v0_4_0.py
control_your_robot/src/robot/planner/: README.md  cobomagic_sim_robot.py  curobo_planner.py  dual_piper_sim_robot.py  requirements.txt
control_your_robot/src/robot/policy/: README.md
control_your_robot/src/robot/policy/ACT/: README.md  README_CN.md  act_policy.py  deploy_policy.yml  inference_model.py  requirements.txt
control_your_robot/src/robot/policy/ACT/detr/: .gitignore  main.py
control_your_robot/src/robot/policy/DP/: README.md  README_CN.md  __init__.py  dp_model.py  inference_model.py  process_data.sh  pyproject.toml
control_your_robot/src/robot/policy/DP/scripts/: process_data.py
control_your_robot/src/robot/policy/RDT/: .gitignore  README.md  README_EN.md  finetune.sh  generate.sh  inference_model.py  requirements.txt
control_your_robot/src/robot/policy/RDT/configs/: dataset_stat.json
control_your_robot/src/robot/policy/RDT/data/: compute_dataset_stat.py  compute_dataset_stat_hdf5.py  episode_transform.py  hdf5_vla_dataset.py  preprocess.py  producer.py  vla_dataset.py
control_your_robot/src/robot/policy/openpi/: .gitignore  __init__.py  debug_dataset.py  inference_model.py  wm_requirements.txt
control_your_robot/src/robot/policy/openvla-oft/: ALOHA.md  LIBERO.md  LICENSE  README.md  README_official.md  SETUP.md  finetune.sh  inference_model.py  pyproject.toml
control_your_robot/src/robot/policy/pistar/: README.md  pistar_requirements.txt
control_your_robot/src/robot/policy/test_policy/: deploy_policy.py  deploy_policy.yml  inference_model.py
control_your_robot/src/robot/policy/weights/: README.md
control_your_robot/src/robot/sensor/: Cv_sensor.py  PikaRos_sensor.py  Quest_sensor.py  Realsense_MultiThread_sensor.py  Realsense_sensor.py  TactileGloveRos2_sensor.py  TactileGloveRos_sensor.py  TestVision_sensor.py  VisionROS_sensor.py  Vitac3D.py  _Pika_sensor.py  sensor.py  teleoperation_sensor.py  touch_sensor.py  vision_sensor.py
control_your_robot/src/robot/utils/base/: bisocket.py  data_handler.py  data_transofrm_pipeline.py
control_your_robot/src/robot/utils/ros/: ros2_publisher.py  ros2_subscriber.py  ros_publisher.py  ros_subscriber.py
control_your_robot/src/robot/utils/task/: task.py  task_functions.py
control_your_robot/src/robot/utils/worker/: component_worker.py  robot_worker.py  time_scheduler.py  worker.py
control_your_robot/task_instructions/: Plug the black plug into the three-hole socket.json  README.md  cap_the_pen.json  fold_towels.json  pull_water.json  stack_plates.json  test.json  ​​fold_shorts.json
control_your_robot/tests/: test_backfill_lerobot_columns.py  test_collect_lerobot_rl.py
control_your_robot/tools/: realsense_serial.py  realsense_test.py  ros_test.py  test_press.py
(+298 files in other folders)
