[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion_policy"
version = "0.1.0"
description = "Diffusion Policy for Robot Control - A powerful framework for learning robot policies using diffusion models"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Control Your Robot Team", email = "team@controlyourrobot.com"}
]
keywords = ["robotics", "machine-learning", "diffusion-models", "policy-learning", "robot-control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]

dependencies = [
    # Core ML/Scientific Computing 
    "numpy>=1.23.3",
    "scipy>=1.9.1", 
    "torch>=1.12.1",
    "torchvision>=0.13.1",
    "numba>=0.56.4",
    "einops>=0.4.1",
    
    # Configuration Management 
    "hydra-core>=1.2.0",
    
    # Diffusion Models 
    "diffusers>=0.11.1",
    "accelerate>=0.13.2",
    
    # Data Processing and Storage 
    "h5py>=3.7.0",
    "zarr>=2.12.0",
    "numcodecs>=0.10.2",
    "dill>=0.3.5.1",
    
    # Computer Vision 
    "opencv-python>=4.6.0",
    "scikit-image>=0.19.3",
    "imageio>=2.22.0",
    "imagecodecs>=2022.9.26",
    
    # Basic Utilities 
    "tqdm>=4.64.1",
    "termcolor>=2.0.1",
    
    # System and Utilities 
    "psutil>=5.9.2",
    "click>=8.0.4",
    "cffi>=1.15.1",
    "threadpoolctl>=3.1.0",
    "shapely>=1.8.4",
    
    # Sensors and Hardware 
    "pyrealsense2>=2.51.1",
    "ur-rtde>=1.5.5",
]

[project.optional-dependencies]
# Training dependencies 
training = [
    "wandb>=0.13.3",
    "tensorboard>=2.10.1", 
    "tensorboardx>=2.5.1",
    "datasets>=2.6.1",
    "matplotlib>=3.6.1",
    "ray[default,tune]>=2.2.0",
]

# Simulation dependencies 
simulation = [
    "gym>=0.21.0",
    "pymunk>=6.2.1", 
    "pybullet>=3.1.6",
    "pygame>=2.1.2",
    "robomimic>=0.2.0",
]

# Video processing dependencies 
video = [
    "av>=10.0.0",
    "pytorchvideo>=0.1.5",
    "scikit-video>=1.1.11",
    "imageio-ffmpeg>=0.4.7",
]

# Cloud storage dependencies 
cloud = [
    "boto3>=1.24.96",
]

# Additional utilities 
utils = [
    "atomics>=1.0.2",
    "pynput>=1.7.6",
    "cython>=0.29.32",
]

# Development dependencies 
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
]

# Documentation dependencies 
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

# Jupyter notebook dependencies 
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.16.0",
    "ipywidgets>=8.0.0",
]

# Full installation with all optional dependencies 
all = [
    "diffusion_policy[training,simulation,video,cloud,utils,dev,docs,notebook]",
]

[project.urls]
Homepage = "https://github.com/your-org/control_your_robot_jie"
Documentation = "https://control-your-robot.readthedocs.io/"
Repository = "https://github.com/your-org/control_your_robot_jie"
"Bug Tracker" = "https://github.com/your-org/control_your_robot_jie/issues"

[project.scripts]
# CLI entry points if needed
# diffusion-policy = "diffusion_policy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["diffusion_policy*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"diffusion_policy" = ["config/*.yaml", "config/**/*.yaml"]

# Black code formatting
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort import sorting
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["diffusion_policy"]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=diffusion_policy",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# mypy type checking
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "scipy.*",
    "matplotlib.*",
    "cv2.*",
    "gym.*",
    "pymunk.*",
    "wandb.*",
    "hydra.*",
    "omegaconf.*",
    "diffusers.*",
    "transformers.*",
]
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["diffusion_policy"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]